--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
     "version": "1.0.0",
     "displayName": "UIElement Extension",
     "description": "This is package make better UITK dev experience",
-    "unity": "2021.3.21f1",
+    "unity": "2021.3",
     "dependencies": 
     {
-        "DocumentBuilder":"https://assetstore.unity.com/packages/tools/utilities/document-builder-240100"
     },
    "keywords": [
       "Tool",
